# tld_skirmish

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
audio/: audio_data.toml
data/: enemy_waves.toml  settings.toml  stage_pool.txt
doc/: CONTRIBUTING.md  game_structure.html  roadmap.html  system_flowchart.html
doc/flowcharts/: game_structure.html  roadmap.html
doc/formulas/: endure_chance.py  parry_window.py
doc/templates/: README.txt  stage_template.ora  stage_template.pdn  stage_template.xcf
graphics/spritesheets/: damned.toml  ghoul.toml  hud_life.toml  hud_mainmenu.toml  hud_menubox.toml  hud_morale.toml  player.toml  sheet_data.toml  weapon_ball.toml  weapon_gun.toml  weapon_knife.toml  weapon_select.toml  wretch.toml
include/: audio.h  audio_data.h  audio_loader.h  char_player.h  cmd_ball_heavy.h  cmd_ball_light.h  cmd_damned_grb.h  cmd_ghoul_atk.h  cmd_guard.h  cmd_gun_heavy.h  cmd_gun_light.h  cmd_heavy_atk.h  cmd_knife_heavy.h  cmd_knife_light.h  cmd_light_atk.h  cmd_wretch_atk.h  constants.h  defaults.h  enemy_damned.h  enemy_dummy.h  enemy_ghoul.h  enemy_wretch.h  fx_dmg_number.h  fx_gunbolt.h  fx_gunprobe.h  game.h  globals.h  hud_life.h  hud_menu.h  hud_menu_btn.h  hud_morale.h  hud_pause.h  proj_ball.h  proj_knife.h  scene_control.h  scene_debug.h  scene_gameover.h  scene_gameplay.h  scene_index.h  scene_menu.h  (+29 more)
include/action_command/: cmd_ball_heavy.h  cmd_ball_light.h  cmd_damned_grb.h  cmd_ghoul_atk.h  cmd_guard.h  cmd_gun_heavy.h  cmd_gun_light.h  cmd_heavy_atk.h  cmd_knife_heavy.h  cmd_knife_light.h  cmd_light_atk.h  cmd_wretch_atk.h
include/base/: action_command.h  actor.h  combatant.h  dynamic_actor.h  generics.h  scene.h  sub-weapon.h
include/combatants/: char_player.h  enemy_damned.h  enemy_dummy.h  enemy_ghoul.h
include/data/: data_enemy.h  data_index.h  data_music.h  data_sound.h  data_sprites.h  data_weapon.h
include/effects/: fx_dmg_number.h  fx_gunbolt.h  fx_gunprobe.h
include/hud/: hud_life.h  hud_menu_btn.h  hud_morale.h
include/projectiles/: proj_ball.h  proj_knife.h
include/scenes/: scene_control.h  scene_debug.h  scene_gameplay.h  scene_index.h  scene_menu.h  scene_settings.h  scene_splash.h  scene_subweapon.h  scene_win.h
include/sub-weapons/: weapon_ball.h  weapon_gun.h  weapon_knife.h
include/system/: wave_manager.h
include/utils/: camera.h  menu.h  sequence.h
src/: audio.cpp  char_player.cpp  cmd_ghoul_atk.cpp  cmd_heavy_atk.cpp  cmd_light_atk.cpp  enemy_dummy.cpp  enemy_ghoul.cpp  game.cpp  globals.cpp  main.cpp  scene_debug.cpp  sprite_loader.cpp  utils.cpp  wave_manager.cpp
src/action_command/: cmd_ball_heavy.cpp  cmd_ball_light.cpp  cmd_damned_grb.cpp  cmd_ghoul_atk.cpp  cmd_guard.cpp  cmd_gun_heavy.cpp  cmd_gun_light.cpp  cmd_heavy_atk.cpp  cmd_knife_heavy.cpp  cmd_knife_light.cpp  cmd_light_atk.cpp  cmd_wretch_atk.cpp
src/base/: action_command.cpp  actor.cpp  combatant.cpp  dynamic_actor.cpp  sub-weapon.cpp
src/combatants/: char_player.cpp  enemy_damned.cpp  enemy_dummy.cpp  enemy_ghoul.cpp  enemy_wretch.cpp
src/effects/: fx_dmg_number.cpp  fx_gunbolt.cpp  fx_gunprobe.cpp
src/hud/: hud_life.cpp  hud_menu.cpp  hud_menu_btn.cpp  hud_morale.cpp  hud_pause.cpp
src/projectiles/: proj_ball.cpp  proj_knife.cpp
src/scenes/: scene_control.cpp  scene_debug.cpp  scene_gameover.cpp  scene_gameplay.cpp  scene_index.cpp  scene_menu.cpp  scene_pregame.cpp  scene_settings.cpp  scene_splash.cpp  scene_subweapon.cpp  scene_title.cpp  scene_win.cpp
src/sub-weapons/: weapon_ball.cpp  weapon_gun.cpp  weapon_knife.cpp
src/system/: audio.cpp  sprites.cpp  transition.cpp  wave_manager.cpp
src/utils/: ai_behavior.cpp  animation.cpp  camera.cpp  dynamic.cpp  enemies.cpp  menu.cpp  music.cpp  settings.cpp  sound.cpp  sprite.cpp  stages.cpp  text.cpp
